hphp/hack/test/typecheck/generic_constructor.php.exp
File "generic_constructor.php", line 9, characters 30-33:
Generic type parameters are not allowed on constructors. Consider adding a type parameter to the class (Parsing[1002])
